feat(trace): add lightweight tracing infrastructure for profiling
- add trace.h with scoped and begin/end tracing APIs
- support Chrome Tracing JSON export for visualization
- instrument qwen2_forward with trace points for all major ops
- enable tracing in CLI with summary and JSON export

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,7 @@ set(CMAKE_SKIP_INSTALL_RULES "${_MRUNTIME_PREV_SKIP_INSTALL_RULES}")
 # Core library sources (bare-metal API)
 set(MRUNTIME_CORE_SOURCES
     src/core/kai_gemm.cpp
+    src/core/trace.cpp
     src/qwen_config.cpp
     src/qwen2_ops.cpp
     src/qwen2_weights.cpp
