--- a/bench/CMakeLists.txt
+++ b/bench/CMakeLists.txt
@@ -1,3 +1,7 @@
 add_executable(mruntime_bench bench.cpp)
 target_link_libraries(mruntime_bench PRIVATE mruntime)
 target_include_directories(mruntime_bench PRIVATE ${CMAKE_SOURCE_DIR}/include)
+
+add_executable(mruntime_e2e_bench qwen2_e2e_bench.cpp)
+target_link_libraries(mruntime_e2e_bench PRIVATE mruntime)
+target_include_directories(mruntime_e2e_bench PRIVATE ${CMAKE_SOURCE_DIR}/include)
